--- a/EK/elasticsearch.yml
+++ b/EK/elasticsearch.yml
@@ -1,10 +1,10 @@
 cluster.name: clust-mkms
 node.name: ndkms-1
-path.data: /data/elasticsearch1
+#path.data: /data/elasticsearch1
 path.logs: /logs/elasticsearch1
 network.host: 127.0.0.1
 node.master: true
-node.data: true
+node.data: false
 discovery.seed_hosts: ["127.0.0.1"]
 cluster.initial_master_nodes: ["127.0.0.1"]
 
